# whisper-note

./: .gitignore  .pre-commit-config.yaml  README.md  config.yml  pyproject.toml  pytest.ini  transcribe_demo.py
tests/: __init__.py  __main__.py  config_test.py  formatter_test.py  language_test.py  rich_table_test.py  transcriptions_test.py  translator_test.py
whisper_note/: __init__.py  __main__.py  cli.py  parse_env_cfg.py  recorder.py  transcribe.py  transcriber.py  transcription.py  translate.py  translator.py  tui.py
whisper_note/supportive_class/: __init__.py  constants.py  enum_language.py  file_and_io.py  format_size.py  format_time.py  formatter.py  language.py  protocol_translator.py  translator.py  typed_config.py  types.py
