[tool.poetry]
name = "whisper-note"
version = "0.1.0"
description = ""
authors = ["PabloLION <36828324+PabloLION@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "whisper_note" }]

[tool.poetry.scripts]
whisper-note = "whisper_note.__main__:run"
note = "whisper_note.__main__:run"
tst = "tests.__main__:run_all_tests"

[tool.poetry.dependencies]
python = ">3.9,<3.12"                                              # 3.12 blocks numpy for `distutils`
SpeechRecognition = "^3.10.0"
openai-whisper = { git = "https://github.com/openai/whisper.git" }
pyaudio = "^0.2.13"
result = "^0.13.1"
deepl = "^1.15.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
numba = "^0.58.0"                                                  # override openai-whisper's default none numba version
rich = "^13.6.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pre-commit = "^3.4.0"
# below are recommended by Copilot
pytest-cov = "^3.0.0"
pytest-mock = "^3.0.0"
pytest-xdist = "^2.0.0"
pytest-timeout = "^1.0.0"
pytest-randomly = "^3.0.0"
pytest-benchmark = "^3.0.0"
pytest-black = "^0.3.0"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
black = "^21.9b0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
